namespace DesignPatterns.FactoryPattern
{
    public interface Shape
    {
         void draw();
    }
}